rename to course online

--- a/courseproject/templates/courseapp/show.html
+++ b/courseproject/templates/courseapp/show.html
@@ -5,13 +5,12 @@
 {% endblock %}
 
 {% block content %}
-<center><h1>Show Orders</h1></center>
+<center><h1>Show Courses</h1></center>
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">Order ID</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
+        <th scope="col">Courses ID</th>
+        <th scope="col">Courses Name</th>
         <th scope="col">Price</th>
         <th scope="col">Email ID</th>
         <th scope="col">Address</th>
@@ -22,8 +21,7 @@
     {% for i in obj %}
       <tr>
         <td>{{i.oid}}</td>
-        <td>{{i.fname}}</td>
-        <td>{{i.lname}}</td>
+        <td>{{i.name}}</td>
         <td>{{i.price}}</td>
         <td>{{i.mail}}</td>
         <td>{{i.addr}}</td>
