--- a/courseproject/templates/courseapp/course.html
+++ b/courseproject/templates/courseapp/course.html
@@ -6,12 +6,12 @@
 {% endblock %}
 
 {% block content %}
-<center><h1>Order Form</h1></center>
+<center><h1>Course Form</h1></center>
 <div class="container">
     <form method="post" class="jumbotron">
         {% csrf_token %}
         {{form|crispy}}
-        <input type="submit" value="Place Order" class="btn btn-success">
+        <input type="submit" value="Place Course" class="btn btn-success">
     </form>
 </div>
 {% endblock %}
